# Neuro-SAN-MAPs

./: .gitignore  Makefile  README.md  blog_post.md  pyproject.toml  requirements-build.txt  requirements-maps.txt  requirements.txt  run.ep001.jsonl  runner.log.2026-05-18  self_improving_agent_networks.md  server.pid  setup.py
.claude/: settings.local.json
.github/workflows/: agent_network_designer.yml  integration.yml  publish.yml  tests.yml
apps/maps_park/: compare_runs.py  maps_mcp_server.py  playbook.default.md  plot_run.py  run_all.sh  run_macro.sh  runner.py
build_scripts/: copyright_config.json  server_start.sh
coded_tools/: action_dispatcher.py  active_trials.py  advance_episode.py  champion_plan.py  episode_telemetry.py  file_io.py  finance_gate.py  latest_observation.py  log_trial.py  maps_modify.py  maps_move.py  maps_place.py  maps_remove.py  maps_set_research.py  maps_survey_guests.py  maps_wait.py  name_map.py  park_status.py  plot_rewards.py  promote_trial.py  propose_action.py  resolve_trials.py  run_telemetry.py  seed_observation.py  seed_playbooks.py  state_read.py  test_champion_plan.py  trial_parsing.py  write_episode_plan.py
coded_tools/common/: file_io.py
coded_tools/config_files/: coordinator_strategy.md  layout_strategy.md  research_economics.md  research_strategy.md  rides_strategy.md  shops_economics.md  shops_strategy.md  staff_strategy.md  survey_strategy.md
coded_tools/file_management/: name_map.py  state_edit.py  state_read.py  state_write.py
coded_tools/maps_park/: action_dispatcher.py  active_trials.py  advance_episode.py  env_snapshot.py  episode_telemetry.py  extract_config.py  finance_gate.py  latest_observation.py  log_trial.py  maps_action_base.py  maps_add_path.py  maps_add_water.py  maps_modify.py  maps_move.py  maps_place.py  maps_remove.py  maps_remove_path.py  maps_remove_water.py  maps_set_research.py  maps_survey_guests.py  maps_wait.py  park_status.py  plot_rewards.py  promote_trial.py  propose_action.py  recurring_daily.py  resolve_trials.py  run_telemetry.py  seed_observation.py  seed_playbooks.py  specialist_snapshots.py  trial_parsing.py  write_episode_plan.py
config/: llm_config.hocon  plugins.hocon
deploy/: Dockerfile  entrypoint.sh  run.sh
docs/: api_key.md  cli.md  dev_guide.md  plugins.md  search_tools.md  toolbox.md  tutorial.md  user_guide.md
docs/cli/: check_config.md  check_llm_keys.md
logs copy/maps_park/: plot_run.py  run.jsonl  turns.jsonl
memory copy/maps_park/: latest_observations.json
middleware/: agent_checklist_middleware.py  static_prompt_caching_middleware.py  trim_history_middleware.py  trim_output_middleware.py  world_server_logger_middleware.py
middleware/persistent_memory/: json_file_store.py  markdown_file_store.py  persistent_memory_middleware.py  persistent_memory_tool.py  topic_store.py  topic_store_factory.py  topic_summarizer.py
neuro_san_studio/: __main__.py
neuro_san_studio/commands/: check_config.py  check_llm_keys.py  cli.py  init.py  run.py
neuro_san_studio/interfaces/: process_logger_interface.py
neuro_san_studio/mcp/: mcp_info.hocon
registries/: aaosa_basic.hocon  manifest.hocon  maps_park.hocon  maps_park_consultant.hocon  maps_park_macro.hocon  maps_park_micro.hocon  planner.hocon  watcher.hocon
scripts/: make_run_comparison.py  plot_all_attempts.py  plot_attempt_trajectory.py  plot_episode.py  plot_park_map.py  plot_run_trajectories.py
(+112 files in other folders)
