[build-system]
requires = ["setuptools>=77.0", "wheel", "setuptools-scm==8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-san-studio"
dynamic = ["version", "dependencies", "optional-dependencies", "readme"]
description = "Multi-agent orchestration studio built on the neuro-san framework."
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
authors = [{ name = "Cognizant AI Lab" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
neuro-san-studio = "neuro_san_studio.commands.cli:main"
ns = "neuro_san_studio.commands.cli:main"

[project.urls]
Homepage = "https://github.com/cognizant-ai-lab/neuro-san-studio"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements-build.txt"] }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["."]
include = ["neuro_san_studio*"]
exclude = ["apps*", "build_scripts*", "coded_tools*", "config*", "deploy*", "docs*", "middleware*", "registries*", "servers*", "skills*", "tests*"]

[tool.setuptools.package-data]
"neuro_san_studio.templates" = ["*.hocon"]
"neuro_san_studio.mcp" = ["*.hocon"]
"neuro_san_studio.toolbox" = ["*.hocon"]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
target-version = "py312"
line-length = 119
src = ["apps", "coded_tools", "neuro_san_studio", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors (e.g. indentation, whitespace, line length)
    "F",  # Pyflakes checks (e.g. undefined names, unused imports, unused variables)
    "I",  # isort import-ordering rules
    "W",  # pycodestyle warnings (e.g. trailing whitespace, blank lines)
]
ignore = []

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["apps", "coded_tools", "tests"]

[tool.pylint]
max-line-length = 119
# Based on Google Python Style Guide
disable = [
    "C0301",  # Line too long (handled by ruff)
    "C0114",  # Missing module docstring (missing-module-docstring)
    # This repo contains examples that should remain independent, so we expect some level of copy/paste
    "R0801",  # Similar lines in 2 files
    "W0511",  # TODO/FIXME comments
    ]
good-names = ["i", "j", "k", "ex", "_", "id", "f", "db", "e"]
ignore-patterns = [".*checkpoint\\.py"]
ignore-paths = ["^venv/.*$", "^.*/\\.venv/.*$"]
# Google style requires docstrings
enable = [
    "useless-suppression",
]
# Google style naming conventions
const-naming-style = "UPPER_CASE"
function-naming-style = "snake_case"
class-naming-style = "PascalCase"
method-naming-style = "snake_case"
attr-naming-style = "snake_case"
argument-naming-style = "snake_case"
variable-naming-style = "snake_case"
inlinevar-naming-style = "snake_case"
# Additional settings
fail-under = 10.0
output-format = "colorized"
init-import = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --cov=. --cov-report=term-missing --no-cov-on-fail"
markers = [
    "existing_marker: ...",
    "integration: integration tests that may be slow or hit external services",
]

[tool.coverage.run]
omit = ["tests/*", "*/venv/*"]
